--- a/contato/contato.css
+++ b/contato/contato.css
@@ -93,12 +93,17 @@ header {
     width: 100%;
     top: 0;
     z-index: 1000;
+    transition: background-color 0.5s ease;
 }
 
 header.transparent {
-    background-color: rgba(13, 15, 18, 0.733); /* Ajuste a cor de fundo e a transparência conforme necessário */
+    background-color: rgba(13, 15, 18, 0); /* Ajuste a cor de fundo e a transparência conforme necessário */
 }
 
+#logoimg{
+    width: 80%;
+    padding: 10px;
+}
 
  
 /*NAV-BAR PC*/
@@ -131,7 +136,7 @@ header.transparent {
 }
 
 .nav-link:hover{
-    color: #D96725;
+    color:  #f98c33ba;
 }
 
 .mobile-menu-icon{
