--- a/projetos/projetos.css
+++ b/projetos/projetos.css
@@ -47,13 +47,17 @@ header {
     width: 100%;
     top: 0;
     z-index: 1000;
+    transition: background-color 0.5s ease;
 }
 
 header.transparent {
-    background-color: rgba(13, 15, 18, 0.733); /* Ajuste a cor de fundo e a transparência conforme necessário */
+    background-color: rgba(13, 15, 18, 0); /* Ajuste a cor de fundo e a transparência conforme necessário */
 }
 
-
+#logoimg{
+    width: 80%;
+    padding: 10px;
+}
  
 /*NAV-BAR PC*/
 .nav-bar {
@@ -85,7 +89,7 @@ header.transparent {
 }
 
 .nav-link:hover{
-    color: #D96725;
+    color:  #f98c33ba;
 }
 
 .mobile-menu-icon{
