--- a/servicos/servicos.css
+++ b/servicos/servicos.css
@@ -46,20 +46,28 @@ header {
     width: 100%;
     top: 0;
     z-index: 1000;
+    transition: background-color 0.5s ease;
 }
+
+
 
 header.transparent {
-    background-color: rgba(13, 15, 18, 0.733); /* Ajuste a cor de fundo e a transparência conforme necessário */
+    background-color: rgba(13, 15, 18, 0); /* Ajuste a cor de fundo e a transparência conforme necessário */
 }
 
 
 
+#logoimg{
+    width: 80%;
+    padding: 10px;
+}
 /*NAV-BAR PC*/
 .nav-bar {
     display: flex;
     justify-content: space-between;
     padding: 6px 6rem; /* Ajuste a altura aqui */
 }
+
 
 .nav-list{
     display: flex;
@@ -84,7 +92,7 @@ header.transparent {
 }
 
 .nav-link:hover{
-    color: #D96725;
+    color:  #f98c33ba;
 }
 
 .mobile-menu-icon{
