--- a/sobrenos/sobrenos.css
+++ b/sobrenos/sobrenos.css
@@ -49,10 +49,13 @@ header {
 }
 
 header.transparent {
-    background-color: rgba(13, 15, 18, 0.733); /* Ajuste a cor de fundo e a transparência conforme necessário */
+    background-color: rgba(13, 15, 18, 0.646); /* Ajuste a cor de fundo e a transparência conforme necessário */
 }
 
-
+#logoimg{
+    width: 80%;
+    padding: 10px;
+}
 
 /*NAV-BAR PC*/
 .nav-bar {
@@ -84,7 +87,7 @@ header.transparent {
 }
 
 .nav-link:hover{
-    color: #D96725;
+    color:  #f98c33ba;
 }
 
 .mobile-menu-icon{
