--- a/style.css
+++ b/style.css
@@ -298,6 +298,7 @@ nav.transparent{
     padding: 22%;
     padding-top: 3%;
     padding-bottom: 5%;
+    font-family: 'nasalization';
 }
 
 .mobile-cards-container{
