--- a/servicos/servicos.css
+++ b/servicos/servicos.css
@@ -1,650 +1,195 @@
 @font-face {
-    font-family: 'futura-light';
-    src: url(../fonts/futura/futura\ light\ bt.ttf)
-
+    font-family: 'futur';
+    src: url(/assets/fonts/futura/futur.ttf);
 }
 
 @font-face {
-    font-family: 'futura-book';
-    src: url(../fonts/futura/Futura\ Book\ font.ttf);
+    font-family: 'futur-book';
+    src: url(/assets/fonts/futura/Futura\ Book\ font.ttf);
 }
 
-:root {
-    --futuraL: 'futura-light'; 
-    --futurab: 'futura-book';
+@font-face {
+    font-family: 'nasalation';
+    src: url(/assets/fonts/nasalization/nasalization-rg.otf);
 }
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: var(--futuraL);
-}
-
-#emdev{
-    color: white;
-    text-align: center;
-    font-size: 30px;
-    margin-top: 10rem;
 }
 
 body{
-    background-color: #0D0F12;
+    background-color: var(--cor-background);
 }
 
-body::-webkit-scrollbar {
-    width: 12px; 
+#btn-mobile{
+    display: none;
 }
 
-body::-webkit-scrollbar-thumb {
-    background-color: #ee600e; /* Cor da parte deslizante da barra de rolagem */
-    border-radius: 6px; 
+:root{
+
+
+    --font-principal:'futur';
+    --font-principal-book: 'futur-book';
+    --font-secundaria:'nasalation';
+
+    --cor-background: #0D0F12;
+    --cor-secundaria: #E76003;
+    --cor-primaria: #D9D7CA;
 }
 
-body::-webkit-scrollbar-track {
-    background-color: #0D0F12; 
-}
-
-
-header {
-    background-color: #0D0F12;
-    font-family: var(--futuraL);
-    position: fixed;
-    width: 100%;
-    top: 0;
-    z-index: 1000;
-    transition: background-color 0.5s ease;
-}
-
-
-
-header.transparent {
-    background-color: rgba(13, 15, 18, 0); /* Ajuste a cor de fundo e a transparência conforme necessário */
-}
-
-
-
-#logoimg{
-    width: 80%;
-    padding: 10px;
-}
-/*NAV-BAR PC*/
-.nav-bar {
-    display: flex;
-    justify-content: space-between;
-    padding: 6px 6rem; /* Ajuste a altura aqui */
-}
-
-
-.nav-list{
+#header{
+    box-sizing: border-box;
     display: flex;
     align-items: center;
-}
-
-.nav-list ul{
-    display: flex;
-    justify-content: center;
-    list-style: none;
-}
-
-.nav-item{
-    margin: 0 15px;
-}
-
-.nav-link{
-    text-decoration: none;
-    font-size: 1.15rem;
-    color:  #eeecdc;
-    font-weight: 400;
-}
-
-.nav-link:hover{
-    color:  #f98c33ba;
-}
-
-.mobile-menu-icon{
-    display: none;
-    
-}
-
-.mobile-menu{
-    display: none;
-}
-
-.cards-container {
-    display: flex;
-    flex-wrap: wrap;
+    height: 70px;
+    padding: 1rem;
+    background-color: var(--cor-background);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    transition: background-color 0.5s ease-in-out;
     justify-content: space-between;
-    padding: 90px;
-    padding-top: 8%;
-    background-color: #eeecdc;
-    text-align: center;
+    
 }
 
+#header.transparent{
+    background-color: transparent;
+    border-bottom: 1px solid #d9d7ca25;
+    
+}
 
-.card {
-    flex: 0 1 calc(30% - 20px); /* Define a largura dos cards e adiciona margem */
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    margin: 10px;
-    padding: 15px;
-    background-color: #eeecdc;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease-in-out;
-    max-width: 300px;
-    padding: 10px;
+#menu{
+    color: var(--cor-primaria);
+    display: flex;
+    list-style: none;
+    gap: 2.5rem;
+    align-items: center;
+    border-radius: 50px;
+    padding: 7px;
+}
+
+ #menu a{
+    color: var(--cor-primaria);
+    text-decoration: none;
+    display: block;
+    padding: 8px;
+    border-radius: 50px;
+    justify-content: center;
+    transition: background-color 0.6s ease;
+    font-family: var(--font-principal-book);
    
-}
+  }
 
-.card:hover {
-    transform: scale(1.05);
-}
-
-.card img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 4px;
-}
-
-.card h3 {
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.card p {
-    color: #fc7f26;
-    padding-bottom: 17px;
-    font-size: 13px;
-    font-weight: bold;
-}
-
-.mobile-card{
-    display: none;
-}
-
-.btn {
-    font-size: 17px;
-    background: transparent;
-    border: none;
-    padding: 1em 1.5em;
-    color: #ff6a00;
-    text-transform: uppercase;
-    position: relative;
-    transition: 0.5s ease;
-    cursor: pointer;
+#menu a:hover{
+    background-color: #E76003;
+     border-radius: 50px;
+     padding: 8px;
     
-  }
-
-  
-  .btn::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 2px;
-    width: 0;
-    background-color: #fc7f26;
-    transition: 0.5s ease;
-  }
-  
-  .btn:hover {
-    color: #f9f9f9;
-    transition-delay: 0.5s;
-  }
-  
-  .btn:hover::before {
-    width: 100%;
-  }
-  
-  .btn::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 0;
-    width: 100%;
-    background-color: #fc7f26;
-    transition: 0.4s ease;
-    z-index: -1;
-  }
-  
-  .btn:hover::after {
-    height: 100%;
-    transition-delay: 0.4s;
-    color: aliceblue;
-  }
-
-  .top-frase{
-    background-color:#0D0F12 ;
-    
-  }
-
-  .top-frase {
-    position: relative;
-    width: auto; /* Ajuste conforme necessário */
-    height: auto; /* Ajuste conforme necessário */
 }
 
-.texto-sobre-imagem {
+#logotipo{
+    max-width: 110px;
+}
+
+/* Estilo da barra de rolagem */
+::-webkit-scrollbar {
+    width: 12px; 
+  }
+  
+
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--cor-secundaria);
+    border-radius: 8px; 
+  }
+  
+  
+  ::-webkit-scrollbar-track {
+    background-color: var(--cor-background); 
+  }
+  
+ 
+  ::-webkit-scrollbar-corner {
+    background-color: var(--cor-background); 
+  }
+
+  .transparent-blur {
+    background-color: transparent;
+    backdrop-filter: blur(5px);
+    border-bottom: 2px solid transparent; 
+}
+
+.solid {
+    background-color: var(--cor-azul2);
+    backdrop-filter: blur(20px);
+    border-bottom: 2px solid #0D0F12;
+}
+
+.container {
+    position: relative;
+    background-color: var(--cor-background);
+}
+
+.text-container {
     position: absolute;
-    top: 50%;
+    top: 53%;
     left: 35%;
     transform: translate(-50%, -50%);
+    text-align: center;
     text-align: left;
-    color: white;
+    padding: 70px;
+    padding-left: 10px;
 }
 
-.texto-sobre-imagem h1{
-    padding-bottom: 30px;
-    padding-top: 10%;
+.text-container h1, p{
+    color: var(--cor-primaria);
+    font-family: var(--font-principal-book);
+
+}
+
+.text-container h1{
+    margin-bottom: 20px;
     font-size: 51px;
-    
 }
 
-.texto-sobre-imagem p{
+.text-container p{
     font-size: 16px;
-    font-family: var(--futurab);
-    font-weight: 500;
-    line-height: 1.4;
-    
-    
 }
 
-
-.subtitle {
-    padding: 27%;
-    padding-bottom: 9%;
-    padding-top: 0%;
-    color: #ee600e;
-    font-size: 46px;
-    text-align: center;
-}
-
-
-
-
-
-  .top-frase img{
-    max-width: 100%;
-    opacity: 31.7%;
-  }
-
-
-
-
-footer {
-    background-color: #0D0F12;
-    color: #fff;
-    padding: 30px 0;
-    text-align: center;
-}
-
-.footer-content {
+#bannerPC {
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-
-.footer-section {
-    max-width: 300px;
-}
-
-.footer-section h2 {
-    color: #D96725;
-    margin-bottom: 10px;
-}
-
-.footer-section p {
-    font-size: 12px;
-    line-height: 1.5;
-    text-transform: uppercase;
-}
-
-.footer-section ul {
-    list-style: none;
-    padding: 0;
-}
-
-.footer-section a {
-    color: #fff;
-    text-decoration: none;
-    
-}
-
-.footer-bottom {
-    margin-top: 20px;
-    padding-top: 10px;
-    border-top: 1px solid #D96725;
-}
-
-.footer-bottom p {
-    font-size: 14px;
-}
-
-#devsession{
-    text-decoration: none;
-    color: #D96725;
-    
-}
-
-#logoinsta{
-    width: 29px;
-    
-}
-
-#logowhats{
-    width: 29px;
-    
-}
-
-#logotiktok{
-    width: 29px;
-    
-}
-
-#logoemail{
-    width: 29px;
-    
-}
-
-.redes-sociais img{
-    margin: 10px;
-    align-items: center;
-    cursor: pointer;
-}
-
-    .top-frase-mobile{
-
-        display: none;
-
-    }
-    
-
-
-@media screen and (max-width: 730px){
-
-    
-    .top-frase-mobile{
-        display: block;
-    }
-
-    .top-frase-mobile img{
-        opacity: 50%;
-    }
-
-    .top-frase-mobile h1 {
-        text-align: center;
-        color: #ffffff;
-        font-weight: bolder;
-        font-size: 39px;
-        position: absolute;
-        top: 42%;
-        left: 2%;
-    }
-
-
-    .top-frase-mobile button {
-        position: absolute;
-        top: 60%;
-        left: 16%;
-    }
-
-    .top-frase-mobile h3 {
-        text-align: center;
-        color: #ffffff;
-        font-weight: bolder;
-        font-size: 23px;
-        position: absolute;
-        top: 66%;
-        left: 31%;
-    }
-
-    
-    .scrolldown {
-        --color: white;
-        --sizeX: 30px;
-        --sizeY: 50px;
-        position: absolute;
-        width: var(--sizeX);
-        height: var(--sizeY);
-        margin-left: var(sizeX / 2);
-        border: calc(var(--sizeX) / 10) solid #ff6a00;
-        border-radius: 50px;
-        box-sizing: border-box;
-        margin-bottom: 16px;
-        cursor: pointer;
-        top: 77%;
-        left: 45%;
-    }
-      
-      .scrolldown::before {
-        content: "";
-        position: absolute;
-        bottom: 30px;
-        left: 50%;
-        width: 6px;
-        height: 6px;
-        margin-left: -3px;
-        background-color: #ff6a00;
-        border-radius: 100%;
-        animation: scrolldown-anim 2s infinite;
-        box-sizing: border-box;
-        box-shadow: 0px -5px 3px 1px #d44c0866;
-      }
-      
-      @keyframes scrolldown-anim {
-        0% {
-          opacity: 0;
-          height: 6px;
-        }
-      
-        40% {
-          opacity: 1;
-          height: 10px;
-        }
-      
-        80% {
-          transform: translate(0, 20px);
-          height: 10px;
-          opacity: 0;
-        }
-      
-        100% {
-          height: 3px;
-          opacity: 0;
-        }
-      }
-      
-      .chevrons {
-        padding: 6px 0 0 0;
-        margin-left: -3px;
-        margin-top: 48px;
-        width: 30px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-      
-      .chevrondown {
-        margin-top: -6px;
-        position: relative;
-        border: solid #ff6a00;
-        border-width: 0 3px 3px 0;
-        display: inline-block;
-        width: 10px;
-        height: 10px;
-        transform: rotate(45deg);
-      }
-      
-      .chevrondown:nth-child(odd) {
-        animation: pulse54012 500ms ease infinite alternate;
-      }
-      
-      .chevrondown:nth-child(even) {
-        animation: pulse54012 500ms ease infinite alternate 250ms;
-      }
-      
-      @keyframes pulse54012 {
-        from {
-          opacity: 0;
-        }
-      
-        to {
-          opacity: 0.5;
-        }
-      }
-
-
-      .mobile-cards-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        
-    }
-    
-    .mobile-card {
-        width: 75%;
-        border: 1px solid transparent;
-        border-radius: 8px;
-        margin: 10px;
-        background-color: transparent;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        transition: transform 0.3s ease-in-out;
-        padding-left: 22%;
-        padding-top: 10%;
-        display: block;
-    }
-    
-    .mobile-card:hover {
-        transform: scale(1.05);
-    }
-    
-    .mobile-card img {
-        max-width: 100%;
-        height: auto;
-        border-radius: 4px;
-    }
-    
-    
-    .mobile-card h3 {
-        margin-top: 10px;
-        margin-bottom: 10px;
-        color: #ff6a00;
-    }
-    
-    .mobile-card p {
-        color: #fafafa;
-        padding-bottom: 17px;
-        font-size: 13px;
-        font-weight: bold;
-    }
-
-
-    .mobile-cards-container h1{
-        color: #ff6a00;
-        padding-top: 14%;
-        font-size: 35px;
-        padding-right: 2%;
-    }
+    max-width: 100%;
+    opacity: 60%;
    
+}
 
-    #txtp{
-        color: #ffffff;
-        font-size: 22px;
-        padding: 15%;
-        padding-top: 6%;
-        padding-bottom: 5%;
-    }
-
-
-
-
-    .top-frase{
-        display: none;
-    }
-
-
-
-    .cards-container{
-        display: none;
-    }
-
-   .top-frase img{
+#bannerMobile{
     display: none;
-   }
+}
 
+#maincontent{
+    display: block;
+   justify-content: center;
+   padding: 5rem;
+   margin: auto;
+   font-family: var(--font-secundaria);
    
+}
 
+#maincontent h1{
+    color: var(--cor-secundaria);
+    text-align: center;
+    justify-content: center;
+    font-size: 50px;
+    padding-bottom: 30px;
+}
 
-    .top-content{
-        display: none;
-    }
-
-
-    .nav-bar{
-        padding: 1.5rem 1rem;
-    }
-
-    .nav-item{
-        display: none;
-    }
-
-    .nav-link{
-        text-decoration: none;
-        font-size: 31px;
-        color: white;
-        font-weight: 400;
-    }
-
-    .nav-link:hover{
-        color: #D96725;
-    }
-
-    .mobile-menu-icon{
-        display: inline-block;
-        
-    }
-
-    .icon{
-        width: 35px;
-        padding-left: 10px;
-        padding-top: 13px;
-    }
-
-    #logoimg{
-        width: 70%;
-        padding-top: 10px;
-    }
+#maincontent p{
+    color: var(--cor-background);
+    text-align: center;
+    justify-content: center;
+    font-size: 27px;
     
-    
-    
-    .mobile-menu-icon button{
-        background-color: transparent;
-        border: none;
-        cursor: pointer;
-        
-        
-    }
-
-    .mobile-menu ul{
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        padding-bottom: 1rem;
-        
-    }
-
-    .mobile-menu .nav-item{
-        display: block;
-        padding-top: 1.2rem;
-    }
-
-    .open{
-        display: block;
-    }
-    
-    
-        .footer-bottom p {
-            font-size: 11px;
-        }
-    }
+}
