--- a/servicos/responsive.css
+++ b/servicos/responsive.css
@@ -28,6 +28,7 @@
 
 @media (max-width: 820px){
 
+
     .text-container{
         display: none;
                                      
@@ -212,6 +213,17 @@
         
     }
 
+    .cards {
+    opacity: 0; /* Start with 0 opacity */
+    transform: translateY(-20px); /* Start with a translateY to hide the cards initially */
+    transition: transform 0.5s ease, opacity 0.5s ease; /* Add transitions for transform and opacity */
+}
+
+    .cards.show {
+        transform: translateY(0); /* Move the cards to their original position on show */
+        opacity: 1; /* Set opacity to 1 when the 'show' class is added */
+    }
+
     .cards div{
 
     max-width: 80%;
@@ -258,6 +270,7 @@
  .mobilecontent p {
    font-size: 16px;
 }
+
 
 
 }
