--- a/servicos/responsive.css
+++ b/servicos/responsive.css
@@ -26,6 +26,20 @@
     --cor-primaria: #D9D7CA;
 }
 
+
+
+@media (max-width: 1035px) {
+
+    .cards{
+        opacity: 100%;
+        transform: translateY(-20px);
+        transition: transform 0.5s ease, opacity 0.5s ease;
+    }
+  
+}
+
+
+
 @media (max-width: 820px){
 
 
@@ -204,31 +218,21 @@
          border-radius: 0;
     }
 
-    .cards{
+    .cards {
         display: flex;
-        flex-direction: column; 
+        flex-direction: column;
         align-items: center;
         justify-content: center;
         margin: auto;
-        
+        opacity: 100%;
+        transform: translateY(-20px);
+        transition: transform 0.5s ease, opacity 0.5s ease;
     }
 
-    .cards {
-    opacity: 0; /* Start with 0 opacity */
-    transform: translateY(-20px); /* Start with a translateY to hide the cards initially */
-    transition: transform 0.5s ease, opacity 0.5s ease; /* Add transitions for transform and opacity */
-}
 
-    .cards.show {
-        transform: translateY(0); /* Move the cards to their original position on show */
-        opacity: 1; /* Set opacity to 1 when the 'show' class is added */
+    .cards div {
+        max-width: 80%;
     }
-
-    .cards div{
-
-    max-width: 80%;
-   
-}
 
 .cards img{
     max-width: 100%;
@@ -277,7 +281,6 @@
 
     
   
-
 
 
    
