--- a/servicos/responsive.css
+++ b/servicos/responsive.css
@@ -225,7 +225,7 @@
         justify-content: center;
         margin: auto;
         opacity: 100%;
-        transform: translateY(-20px);
+        transform: translateY(-40px);
         transition: transform 0.5s ease, opacity 0.5s ease;
     }
 
@@ -275,6 +275,16 @@
    font-size: 16px;
 }
 
+     .cards {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: auto;
+        opacity: 100%;
+        transform: translateY(-40px);
+        transition: transform 0.5s ease, opacity 0.5s ease;
+    }
 
 
 }
