--- a/servicos/responsive.css
+++ b/servicos/responsive.css
@@ -286,6 +286,16 @@
         transition: transform 0.5s ease, opacity 0.5s ease;
     }
 
+     .card {
+            width: 100%;
+            box-sizing: border-box;
+            transition: transform 0.3s ease;
+        }
+
+        .card.zoom {
+            transform: scale(1.1);
+        }
+
 
 }
 
