--- a/style.css
+++ b/style.css
@@ -399,6 +399,22 @@ main{
  
 }
 
+.project {
+    transition: opacity 2s ease-in-out; 
+    opacity: 0;
+}
+
+.project.appear {
+    opacity: 1;
+}
+
+.project-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+
 
 
 #projectdestaque img{
