--- a/style.css
+++ b/style.css
@@ -156,8 +156,8 @@ main{
 
 .container h2 {
     color: var(--cor-primaria);
-    font-size: 10vw; /* Use viewport width unit for responsive font size */
-    top: 36%;
+    font-size: 10vw;
+    top: 39%;
     left: 26%;
     transform: translateX(-50%);
 }
