--- a/sobre/sobre.css
+++ b/sobre/sobre.css
@@ -313,6 +313,37 @@ body{
     transition: 0.5s;
 }
 
+
+
+.mvvcontainer{
+  display: block;
+  align-items: center;
+  text-align: left;
+  margin: 10% auto;
+
+}
+
+#mvvcontent{
+  padding: 75px;
+}
+
+
+.missao{
+  background-color: #E76003;
+  
+}
+
+.missao h1{
+  color: var(--cor-primaria);
+  margin-bottom: 20px;
+}
+
+.valores{
+  background-color: var(--cor-primaria);
+}
+
+
+
 section {
   
   left: 0;
