--- a/sobre/sobre.css
+++ b/sobre/sobre.css
@@ -128,6 +128,14 @@ body{
     border-bottom: 2px solid #0D0F12;
 }
 
+.mvvcontainer {
+  opacity: 0;
+  transition: opacity 1.5s ease-in-out;
+}
+
+.mvvcontainer.show {
+  opacity: 1;
+}
 
 
 .mvvcontainer {
