--- a/contato/responsive.css
+++ b/contato/responsive.css
@@ -34,6 +34,39 @@
 @media (max-width: 820px){
 
 
+     .container{
+        flex-direction: column;
+     }
+
+     .content h1{
+        font-size: 34px;
+     }
+
+     .content p {
+    font-size: 17px;
+    
+    }
+
+    .content h5{
+        font-size: 13px;
+    }
+
+    .outhersctt {
+    justify-content: center;
+    display: flex;
+    gap: 34px;
+    margin-top: 27px;
+}
+
+   .outhersctt img {
+    width: 40px;
+}
+
+     form{
+        margin-top: 30px;
+     }
+
+
         .mvvcontainer{
             margin-top: 30%;
         }
