--- a/style.css
+++ b/style.css
@@ -416,6 +416,16 @@ main{
     opacity: 0;
 }
 
+.project img{
+  transition: 0.5s ease-in-out;
+}
+
+.project img:hover {
+  opacity: 0.7;
+  cursor: pointer;
+}
+
+
 .project.appear {
     opacity: 1;
 }
