--- a/projetos/projects.css
+++ b/projetos/projects.css
@@ -519,7 +519,7 @@ footer.bottom .links > a {
 
 .project img:hover {
   opacity: 0.7;
-  cursor: pointer;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.603); /* Adicione a sombra desejada aqui */
 }
 
 #typing-effect::after {
