--- a/servicos/servicos.css
+++ b/servicos/servicos.css
@@ -72,21 +72,19 @@ body{
 }
 
  #menu a{
-    color: var(--cor-primaria);
     text-decoration: none;
-    display: block;
-    padding: 8px;
-    border-radius: 50px;
-    justify-content: center;
-    transition: background-color 0.6s ease;
+    color: var(--cor-primaria); 
+    font-size: 16px; 
+    position: relative;
+    border-bottom: 2px solid transparent; 
+    transition: border-bottom 0.3s ease; 
     font-family: var(--font-principal-book);
    
   }
 
 #menu a:hover{
-    background-color: #E76003;
-     border-radius: 50px;
-     padding: 8px;
+    border-bottom: 2px solid #E76003; 
+    padding-bottom: 4px; 
     
 }
 
