--- a/sobre/sobre.css
+++ b/sobre/sobre.css
@@ -73,19 +73,21 @@ body{
 }
 
  #menu a{
+    color: var(--cor-primaria);
     text-decoration: none;
-    color: var(--cor-primaria); 
-    font-size: 16px; 
-    position: relative;
-    border-bottom: 2px solid transparent; 
-    transition: border-bottom 0.3s ease; 
+    display: block;
+    padding: 8px;
+    border-radius: 50px;
+    justify-content: center;
+    transition: background-color 0.6s ease;
     font-family: var(--font-principal-book);
    
   }
 
 #menu a:hover{
-    border-bottom: 2px solid #E76003; 
-    padding-bottom: 4px; 
+    background-color: #E76003;
+     border-radius: 50px;
+     padding: 8px;
     
 }
 
