--- a/contato/contact.css
+++ b/contato/contact.css
@@ -89,24 +89,31 @@ body::before {
     padding: 7px;
 }
 
- #menu a{
+#menu a {
     color: var(--cor-primaria);
     text-decoration: none;
     display: block;
     padding: 8px;
-    border-radius: 50px;
     justify-content: center;
-    transition: background-color 0.6s ease;
     font-family: var(--font-principal-book);
-   
-  }
-
-#menu a:hover{
-    background-color: #E76003;
-     border-radius: 50px;
-     padding: 8px;
-    
+    position: relative; /* Adicionando position relative */
 }
+
+#menu a::after {
+    content: '';
+    position: absolute;
+    left: 0; /* Posicionando no lado esquerdo */
+    bottom: 0;
+    width: 0; /* Inicialmente, a largura será zero */
+    height: 2px; /* Altura da borda */
+    background-color: #E76003; /* Cor da borda */
+    transition: width 0.6s ease; /* Adicionando transição para a largura */
+}
+
+#menu a:hover::after {
+    width: 100%; /* Expandindo a largura para 100% */
+}
+
 
 #logotipo{
     max-width: 110px;
