--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @font-face {
     font-family: 'futur';
     src: url(assets/fonts/futura/Futura\ Heavy\ font.ttf);
@@ -12,6 +18,8 @@
     font-family: 'nasalation';
     src: url(assets/fonts/nasalization/nasalization-rg.otf);
 }
+
+
 
 *{
     margin: 0;
@@ -28,7 +36,7 @@
 
     --font-principal:'futur';
     --font-principal-book: 'futur-book';
-    --font-secundaria:'nasalation';
+    --font-secundaria:'Poppins';
 
     --cor-background: #0D0F12;
     --cor-secundaria: #E76003;
@@ -194,8 +202,7 @@ main{
    justify-content: center;
    padding: 5rem;
    margin: auto;
-   font-family: var(--font-secundaria);
-   
+  font-family: "Poppins", sans-serif;
 }
 
 #maincontent h1{
